--- a/src/client/components/StoryList.module.css
+++ b/src/client/components/StoryList.module.css
@@ -1,5 +1,5 @@
 .list {
-  padding: 16px;
+  padding-top: 4px;
   border-top: 1px solid var(--border-default);
 }
 
